ircv3_parse_derive/tests/ui/de/fail/empty_attribute_value.stderr
error: invalid source field (valid options: `name`, `user`, or `host`)
  --> tests/ui/de/fail/empty_attribute_value.rs:11:20
   |
11 |     #[irc(source = "")]
   |                    ^^
